--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         <li>
           <a href="https://github.com/andermartins" target="_blank">GitHub</a>
         </li>
+
+        <li>
+          <a href="https://youtube.com/@TheMartins619" target="_blank">YouTube</a>
+        </li>
       </ul>
       <div id="social-links">
         <a href="https://github.com/andermartins" target="_blank">
@@ -50,6 +54,10 @@
 
         <a href="https://www.twitch.tv/andermartinss" target="_blank">
           <ion-icon name="logo-twitch"></ion-icon>
+        </a>
+
+        <a href="https://youtube.com/@TheMartins619" target="_blank">
+          <ion-icon name="logo-youtube"></ion-icon>
         </a>
 
       </div>
