--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
       </div>
       <ul>
         <li>
-          <a href="https://www.instagram.com/andermartinss" target="_blank">Instagram</a>
+          <a href="https://www.tiktok.com/@andermartinsgaming" target="_blank">Gameplays 1</a>
         </li>
 
         <li>
-          <a href="https://www.twitch.tv/andermartinss" target="_blank">Twitch</a>
+          <a href="https://k.kwai.com/u/@AnderMartinss/eCigZFrz" target="_blank">Gameplays 2</a>
         </li>
 
         <li>
-          <a href="https://github.com/andermartins" target="_blank">GitHub</a>
+          <a href="https://github.com/AnderMartins/app_locadora_carros" target="_blank">Meu projeto PHP</a>
         </li>
 
         <li>
-          <a href="https://youtube.com/@TheMartins619" target="_blank">YouTube</a>
+          <a href="https://youtube.com/@TheMartins619" target="_blank">Drumcovers</a>
         </li>
       </ul>
       <div id="social-links">
@@ -58,6 +58,10 @@
 
         <a href="https://youtube.com/@TheMartins619" target="_blank">
           <ion-icon name="logo-youtube"></ion-icon>
+        </a>
+
+        <a href="https://www.tiktok.com/@andermartinsgaming" target="_blank">
+          <ion-icon name="logo-tiktok"></ion-icon>
         </a>
 
       </div>
